<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <ImageView
            android:id="@+id/header_image"
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:background="@drawable/crossfit_crossfit_training_energy_1552242"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/what_is_tdee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/what_is_tdee"
            android:textColor="@color/mainColor"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_gravity="center" />
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:text="@string/started_text"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/mainColorOrange"
            android:textSize="20sp" />

        <Button
            android:id="@+id/get_started_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:background="@color/radioButtons"
            android:text="START"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            tools:ignore="ContentDescription" />
        <CheckBox
            android:id="@+id/do_not_show_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:buttonTint="@color/radioButtons"
            android:layout_gravity="center"
            android:text="@string/do_not_show_again"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</ScrollView>