<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/whiteOff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/mainColor"
            android:text="@string/here_are_your_results"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:fontFamily="@font/tuna_medium"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/results_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/tuna_medium"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textColor="@color/mainColor"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:cardCornerRadius="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lose_weight"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/mainColor"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lose_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/protein_carbs_fats"
                    android:textColor="@color/mainColorOrange"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"/>
                <TextView
                    android:id="@+id/lose_macros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/mainColorOrange"/>
                <TextView
                    android:id="@+id/lose_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/mainColorOrange"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:cardCornerRadius="15dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maintain_weight"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/mainColor"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:text="@string/protein_carbs_fats"
                        android:textColor="@color/mainColorOrange"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"/>
                    <TextView
                        android:id="@+id/maintainMacros"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/mainColorOrange"/>
                    <TextView
                        android:id="@+id/maintain_calories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/mainColorOrange"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="15dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gain_weight"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/mainColor"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:text="@string/protein_carbs_fats"
                        android:textColor="@color/mainColorOrange"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"/>
                    <TextView
                        android:id="@+id/gainMacros"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/mainColorOrange"/>
                    <TextView
                        android:id="@+id/gain_calories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/mainColorOrange"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/disclaimer"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/recalculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/recalculate" />

    </LinearLayout>

</ScrollView>